# Football_predict

./: .gitignore  current.py  inspect_features.py  pyproject.toml  test_arch_tuned_model.py
.github/: copilot-instructions.md
data_collection/: Capology_payroll_scrapping.py  collect_elo.py  collect_match_history.py  collect_understat.py  elementary_scraper.py  scrapp_elo.py  understat_scrapping.py
preprocessing/: build_understat_features.py  elo_integration.py  feature_engineering.py  generate_clubelo_mapping.py  generate_team_mapping.py  generate_unified_mappings.py  odds_integration.py
prod_run/: build_prod_features.py  elo_scrap.py  features_lib.py  fetch_odds.py  generate_html_report.py  pipeline.py  preprocess_prod.py  undestat_scrap.py  upcoming_games.py
training/: architecture_search.py  betting_model_search.py  hyperparameter_search.py  models_training.py  pytorch_model.py  pytorch_testing.py  train_utils.py
training/evaluation/: __init__.py  metrics.py
training/models/: __init__.py  neural_net.py
utils/: __init__.py  email_utils.py  portfolio.py
