[project]
name = "football-predict"
version = "0.1.0"
description = "Machine learning model for predicting football outcomes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.6.0",
    "mlflow>=3.7.0",
    "optuna>=4.6.0",
    "optuna-integration[mlflow]>=4.6.0",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "soccerdata>=1.8.7",
    "torch>=2.9.1",
]

[tool.uv.sources]
soccerdata = { git = "ssh://git@github.com/dimitrismoustakas/soccerdata.git", rev = "understat-fix" }
